--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "eslint-plugin-import": "^1.6.1",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.0.1"
+  },
+  "dependencies": {
+    "express": "^4.15.2",
+    "geocoder": "^0.2.3"
   }
 }
